# kitty-cad-backend

./: .gitignore  Cargo.toml  Containerfile  README.md  compose.yaml
crates/engine/: Cargo.toml
crates/engine/src/: commands.rs  export.rs  lib.rs  session.rs  tessellation.rs
crates/engine/src/geometry/: boolean.rs  mod.rs  query.rs  sketch.rs  solid.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  modeling_cmd.rs  responses.rs  ws_messages.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs
crates/server/src/routes/: meta.rs  mod.rs  modeling.rs  users.rs
