[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
protocol = { path = "../protocol" }
engine = { path = "../engine" }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
hyper = "1"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures = "0.3"
